--- a/app/ngUpload1.html
+++ b/app/ngUpload1.html
@@ -77,7 +77,8 @@
 			<input type="text" ng-model="updata.date"><br> 阅读量：
 			<input type="text" ng-model="updata.readnum"> 分类：
 			<input ng-model="updata.classify" type="text"> 是否再首页显示：
-			<input ng-model="updata.toindex" type="text"> 详情： <textarea class="abc" name="" id="" cols="10" rows="100"></textarea>
+			<input ng-model="updata.toindex" type="text"> 
+			详情： <textarea class="abc" name="" id="" cols="30" rows="10"></textarea>
 			<button ng-click="save()">save</button>
 			<script>
 				$(".abc").summernote()
