--- a/app/index.html
+++ b/app/index.html
@@ -23,18 +23,19 @@
 	<div>
 		<div class="m_header">
 			<div id="blink">炫 耀</div>
-			<div class="youshang">PROPERTIES</div>
 		</div>
 		<div class="dahezi">
 			<div class="zuo">
-				<span ng-click="dj()" ui-sref="main" ui-sref-active="mr">JING-EX</span>
+				<span>JING-EX</span>
 				<span>JING-IMG</span>
-				<span>JING-EXEC</span>
+				<span ng-click="dj()" ui-sref="main" ui-sref-active="mr">JING-EXEC</span>
 				<span ng-click="dj()" ui-sref="page" ui-sref-active="mr">JING-NEW</span>
 			</div>
-			<div class="you">										
-					<div ui-view></div>
+			<div class="you">
+				<div class="youshang">PROPERTIES</div>
+				<div ui-view></div>
 			</div>
+
 		</div>
 	</div>
 		<!-- build:js(.) scripts/vendor.js -->
