--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 		<!-- endbuild -->
 		<!-- build:css(.tmp) styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css">
+		<link rel="stylesheet" href="styles/page.css">
 		<!-- endbuild -->
 	</head>
 
@@ -25,19 +26,14 @@
 		</div>
 		<div class="dahezi">
 			<div class="zuo">
-				<span id="mr">JING-EX</span>
+				<span>JING-EX</span>
 				<span>JING-IMG</span>
-				<span>JING-EXEC</span>
-				<span>JING-NEW</span>
+				<span ng-click="dj()" ui-sref="main" ui-sref-active="mr">JING-EXEC</span>
+				<span ng-click="dj()" ui-sref="page" ui-sref-active="mr">JING-NEW</span>
 			</div>
 			<div class="you">
 				<div class="youshang">PROPERTIES</div>
-				<div class="biaoti">
-					<span>id</span>
-					<span>TITLE</span>
-					<span>MODIFY</span>
-					<span>DELETE</span>
-				</div>
+				
 				<div ui-view></div>
 			</div>
 		</div>
@@ -55,6 +51,7 @@
 		<!-- build:js({.tmp,app}) scripts/scripts.js -->
 		<script src="scripts/app.js"></script>
 		<script src="scripts/controllers/main.js"></script>
+		<script src="scripts/controllers/page.js"></script>
 		<!-- endbuild -->
 
 	</body>
