--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 		<!-- build:css(.tmp) styles/main.css -->
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/page.css">
+		<link rel="stylesheet" href="styles/jing_img.css">
 		<!-- endbuild -->
 	</head>
 
@@ -27,9 +28,9 @@
 		<div class="dahezi">
 			<div class="zuo">
 				<span>JING-EX</span>
-				<span>JING-IMG</span>
-				<span ng-click="dj()" ui-sref="main" ui-sref-active="mr">JING-EXEC</span>
-				<span ng-click="dj()" ui-sref="page" ui-sref-active="mr">JING-NEW</span>
+				<span ui-sref="jing_img" ui-sref-active="mr">JING-IMG</span>
+				<span ui-sref="main" ui-sref-active="mr">JING-EXEC</span>
+				<span ui-sref="page" ui-sref-active="mr">JING-NEW</span>
 			</div>
 			<div class="you">
 				<div class="youshang">PROPERTIES</div>
@@ -52,6 +53,7 @@
 		<script src="scripts/app.js"></script>
 		<script src="scripts/controllers/main.js"></script>
 		<script src="scripts/controllers/page.js"></script>
+		<script src="scripts/controllers/jing_img.js"></script>
 		<!-- endbuild -->
 
 	</body>
