--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="styles/main.css">
 		<link rel="stylesheet" href="styles/page.css">
 		<link rel="stylesheet" href="styles/shouye.css" />
+		<link rel="stylesheet" href="styles/jing_img.css" />
 		<!-- endbuild -->
 	</head>
 
@@ -28,7 +29,7 @@
 		<div class="dahezi">
 			<div class="zuo">
 				<span ng-click="dj()" ui-sref="shouye" ui-sref-active="mr">JING-EX</span>
-				<span>JING-IMG</span>
+				<span ng-click="dj()" ui-sref="jing_img" ui-sref-active="mr">JING-IMG</span>
 				<span ng-click="dj()" ui-sref="main" ui-sref-active="mr">JING-EXEC</span>
 				<span ng-click="dj()" ui-sref="page" ui-sref-active="mr">JING-NEW</span>
 			</div>
@@ -54,6 +55,7 @@
 		<script src="scripts/controllers/main.js"></script>
 		<script src="scripts/controllers/page.js"></script>
 		<script src="scripts/controllers/shouye.js"></script>
+		<script src="scripts/controllers/jing_img.js"></script>
 		<!-- endbuild -->
 
 	</body>
