--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 		<script src="scripts/controllers/page.js"></script>
 		<script src="scripts/controllers/shouye.js"></script>
 		<script src="scripts/controllers/jing_img.js"></script>
+		<script src="scripts/controllers/jx.js"></script>
 		<!-- endbuild -->
 
 	</body>
